--- a/src/sass/lib/_mixin.scss
+++ b/src/sass/lib/_mixin.scss
@@ -1,6 +1,15 @@
 @charset "UTF-8";
 
+// font size: 16px;
+@mixin font-size($sizeValue: 1.6) {
+  font-size: ($sizeValue * 10) + px;
+  font-size: $sizeValue + rem;
+}
 
+@mixin line-height($heightValue: 1.6) {
+  line-height: ($heightValue * 10) + px;
+  line-height: $heightValue + rem;
+}
 
 @mixin r($width) {
 	@media only screen and (max-width: $width+ "px") {
