--- a/src/sass/lib/_variables.scss
+++ b/src/sass/lib/_variables.scss
@@ -1,1 +1,3 @@
-$blue: blue;
+@include font-face('PoiretOneRegular', "../fonts/PoiretOneRegular" ,null, null, ttf eot woff svg);
+@include font-face('ComfortaaRegular', "../fonts/ComfortaaRegular" ,null, null, ttf eot woff svg);
+@include font-face('ComfortaaBold', "../fonts/ComfortaaBold" ,null, null, ttf eot woff svg);
