--- a/src/sass/lib/_variables.scss
+++ b/src/sass/lib/_variables.scss
@@ -1,1 +1,1 @@
-@include font-face('PoiretOneRegular', "../fonts/PoiretOneRegular" ,null, null, ttf eot woff svg);
+@include font-face('PT_SansItalic', "../fonts/PT_SansItalic" ,null, null, ttf eot woff svg);
