--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,6 +1,7 @@
-/* --- general styles --- */
+// general styles
 
 * {
+  outline: none;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -13,22 +14,43 @@ html {
 }
 
 body {
-  background-color: #fff;
-  color: #333;
-  font-family: 'PoiretOneRegular', $font-stack-helvetica;
-  @include font-size(1.6);
+  background: #fff;
+  height: 100%;
+  width: 100%;
+  color: #000;
+  font-family: 'PT_SansItalic', $font-stack-helvetica;
+  font-size: 16px;
   font-smoothing: antialiased;
   font-kerning: normal;
   text-rendering: optimizeLegibility;
+  position: relative;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5 {
+h1,h2,h3,h4{
   margin: 0;
   font-weight: normal;
+}
+
+
+
+p{
+  line-height: 26px;
+  letter-spacing: 0.05em;
+  margin: 8px 0 24px;
+  color: #bbb;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  li {
+    list-style: none;
+  }
 }
 
 a {
@@ -36,53 +58,45 @@ a {
   color: inherit;
 }
 
-ul {
-  li {
-    list-style: none;
-  }
+strong,
+b{
+  font-family: 'PT_SansItalic', $font-stack-helvetica;
+  font-weight: bold;
 }
 
 input,
-textarea {
+textarea{
   
-  &:hover,
-  &:active,
-  &:focus {
-    
-  }
-}
-
-label {
-  
-}
-
-p {
-  
-}
-
-.wrap {
-  width: 100%;
-  max-width: 1680px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
-
-.row{
-  margin: 0 -15px;
-  font-size: 0;
-  .col{
-    padding: 0 15px;
-    display: inline-block;
-    vertical-align: top;
-  }
-}
-
-.btn {
-  color: #333;
-  display: inline-block;
   &:hover,
   &:focus,
-  &:active {
+  &:active{
     
   }
 }
+
+textarea{
+  resize: none;
+  min-height: 132px;
+}
+
+::-webkit-input-placeholder {color: #999;}
+::-moz-placeholder          {color: #999;}/* Firefox 19+ */
+:-moz-placeholder           {color: #999;}/* Firefox 18- */
+:-ms-input-placeholder      {color: #999;}
+
+.wrap{
+  max-width: 1236px;
+  padding: 0 18px;
+  margin: 0 auto;
+}
+
+.btn{
+    
+  &:hover,
+  &:focus,
+  &:active{
+    
+  }
+}
+
+// header 
